--- a/Ac2-FullStack/src/styles.css
+++ b/Ac2-FullStack/src/styles.css
@@ -22,11 +22,12 @@ header{
 }
 
 .res-container {
-    height: 180px;
+    min-height: 200px;
+    max-height: auto;
     width: 300px;
-    border: none;
-    border-radius: 300%;
-    margin-top: 10px;
+    border: black solid 7px;
+    border-radius: 55px;
+    margin: 15px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -44,8 +45,8 @@ a:link, a:visited {
     max-height: 60px;
     max-width: 100px;
     border-radius: 5px;
-    background-color: #6667d7;
-    color: white;
+    background-color: #3b3b3b;
+    color: whitesmoke;
     padding: 14px 25px;
     margin: 5px;
     text-align: center;
@@ -54,6 +55,6 @@ a:link, a:visited {
     cursor: pointer;
   }
   
-  a:hover, a:active {
-    background-color: rgb(119, 63, 135);
+  a:hover{
+    background-color: rgb(225, 165, 54);
   }
